Think I've just corrected the game page so that the lights and styling works on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,28 +443,56 @@ h1 {
 
 }
 
-@media only screen and (min-width: 630px) {
+@media only screen and (max-width: 450px) {
 
     #pink {
-        height: 60px;
-        width: 60px;
-        margin-right: 90px;
+        height: 50px;
+        width: 50px;
+        margin-right: 60px;
+        margin-bottom: 0px;
     }
 
     #blue {
-        height: 60px;
-        width: 60px;
+        height: 50px;
+        width: 50px;
     }
 
     #white {
-        height: 60px;
-        width: 60px;
+        height: 50px;
+        width: 50px;
     }
 
     #lime {
-        height: 60px;
-        width: 60px;
-        margin-right: 90px;
+        height: 50px;
+        width: 50px;
+        margin-right: 60px;
     }
+
+       #orange {
+        height: 50px;
+        width: 50px;
+    }
+
+    .button-box3 {
+        margin-top: 130px;
+    }
+
+    @keyframes LINTON {
+    0% {
+        transform: translateX(0) translateY(0px) rotate(-3deg);
+    }
+    25% {
+        transform: translateX(0.5px) translateY(7px) rotate(0deg);
+    }
+    50% {
+        transform: translateX(0px) translateY(3px) rotate(3deg);
+    }
+    75% {
+        transform: translateX(0.5px) translateY(5px) rotate(0deg);
+    }
+    100% {
+        transform: translateX(0px) translateY(0px) rotate(-3deg);
+    }
+}
 
 }
